    debhelper.mk.  Closes: bug#489430 (for real this time), thanks to
    Martin Koeppe for insisting.
  * Introduce new variable DEB_PYTHON_MODULE_PACKAGES, and properly
    deprecate DEB_PYTHON_MODULE_PACKAGE (instead of just dropping it, as
    was done in 0.4.53).  Add NEWS entry.  This closes: bug#521180,
    thanks to Marc Dequènes.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 28 Mar 2009 10:41:05 +0100

cdbs (0.4.53) unstable; urgency=low

  [ Jonas Smedegaard ]
  * Relax python-central build-dependency to >= 0.5.6 in python-distutils
    class (instruction in python policy is only really needed for
    transition of python-central itself, which has now completed).
  * Adjust perlmodule.mk to not rely on specific inclusion order of cdbs
    files.  Closes: bug#489430, thanks to Martin Koeppe.
  * Drop bogus phrase about ordered relation between debhelper.mk and
    perl.mk in documentation.
  * Run dh_pycentral/dh_pysupport before dh_installinit.  Closes:
    bug#494288, thanks to Guido Günther.
  * Add support for debhelper level 7 (debhelper.mk):
    - Add new option DEB_DH_PREP. At levels <= 7 "dh_clean -k" is used
      by default, at newer levels "dh_prep" is used
    - Support level 7 in CDBS_BUILD_DEPENDS
  * Drop support for Python policy v1 from python-distutils.mk:
    - Drop code handling python policy v1
    - Strip no longer supported options DEB_PYTHON_COMPILE_VERSION and
      DEB_PYTHON_PACKAGES_EXCLUDE from documentation
    - Add NEWS entry about the change
  * Make python-distutils.mk only depend on debhelper when actually
    used, and only require special inclusion order when
    DEB_AUTO_UPDATE_DEBIAN_CONTROL is used.
  * Drop use of dh_python from python-distutils.mk:
    - Drop actual dh_python invocation
    - Build-depend unversioned on python-support and python-central (as
      the required versions adopting the functionality of dh_python are
      provided since oldstable), and drop build-dependency on debhelper.