@@ -28,7 +28,7 @@ setup_workdir
 cat <<EOF >$WORKDIR/debian/rules
 #!/usr/bin/make -f
 DEB_PYTHON_SYSTEM = pycentral
-DEB_PYTHON_MODULE_PACKAGE = python-cdbs-testsuite
+DEB_PYTHON_MODULE_PACKAGES = python-cdbs-testsuite
 include debian/testsuite.mk
 include \$(_cdbs_package_root_dir)/1/rules/debhelper.mk.in
 include \$(_cdbs_package_root_dir)/1/class/python-distutils.mk.in
